[package]
edition = "2021"
name = "kvlet"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1"
chrono = "0.4"
clap = {version = "3.0.7", features = ["derive"]}
env_logger = "0.9.0"
fs2 = "0.4.3"
futures = "0.3"
log = "0.4.14"
regex = "1.5.4"
reqwest = {version = "0.11", default-features = false, features = ["json", "rustls-tls", "blocking"]}
rusqlite = "0.26.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tabled = "0.4.2"
tokio = {version = "1", features = ["full"]}
